# rust-noise-ninja

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
lib-generator/: Cargo.toml
lib-generator/src/: main.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
public/sounds/: lib.json
src/: app.rs  main.rs  shared.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: button.rs  control_panel.rs  grid.rs  mod.rs  presets.rs  schedule.rs  settings_menu.rs  sound_library.rs
