[package]
name = "tauri_hush_vibe-ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = [
  "core",
  "event",
] }
js-sys = { version = "0.3", features = [] }
web-sys = { version = "0.3", features = [
  "HtmlAudioElement",
  "HtmlMediaElement",
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_heroicons = { git = "https://github.com/bbstilson/leptos_heroicons.git", features = [
  "24-outline-play-circle",
  "24-outline-pause-circle",
  "24-outline-speaker-wave",
  "24-outline-speaker-x-mark",
  "24-outline-arrows-right-left",
  "24-outline-folder",
  "24-outline-trash",
  "24-outline-check-circle",
  "24-outline-calendar-days",
  "24-outline-clock",
  "24-outline-bars-2",
  "24-outline-x-mark",
] }
regex = "1.10.5"
leptos-use = "0.12"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[workspace]
members = ["lib-generator", "src-tauri"]

[package.metadata.leptos]

# Activates the tailwind build
tailwind-input-file = "tailwind.css"
tailwind-config-file = "tailwind.config.js"
